[gd_scene load_steps=15 format=3 uid="uid://dt76adorl8n2d"]

[ext_resource type="Script" uid="uid://cfe0bej5o8514" path="res://rooms/level.gd" id="1_t703y"]
[ext_resource type="PackedScene" uid="uid://blpgyua7icaoc" path="res://entities/playercontrolled/ball.tscn" id="2_51rim"]
[ext_resource type="PackedScene" uid="uid://bmur2mu3v4hay" path="res://entities/playercontrolled/paddle.tscn" id="3_vys0a"]
[ext_resource type="PackedScene" uid="uid://2e54h8ds6it3" path="res://entities/rowprefabs/block_row.tscn" id="4_kriqx"]
[ext_resource type="PackedScene" uid="uid://bii1ijy2carsl" path="res://rooms/pause_menu.tscn" id="4_r8jsn"]
[ext_resource type="PackedScene" uid="uid://on5ej2ouvupe" path="res://rooms/game_over_menu.tscn" id="6_xp2g4"]
[ext_resource type="PackedScene" uid="uid://qr2ou1q6p5ki" path="res://assets/bg.tscn" id="7_hvyoc"]
[ext_resource type="Texture2D" uid="uid://c2mw6kw2hlu38" path="res://assets/walls.png" id="8_t4ir7"]
[ext_resource type="AudioStream" uid="uid://cgwc5nxgp2eup" path="res://assets/explosion.wav" id="9_31fi7"]
[ext_resource type="PackedScene" uid="uid://beyhrqldv1hx" path="res://assets/scene_trans.tscn" id="9_yhl0x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wc843"]
size = Vector2(2288, 20)

[sub_resource type="LabelSettings" id="LabelSettings_2rmsu"]
font_size = 64

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u8ati"]
texture = ExtResource("8_t4ir7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_boc5s"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_u8ati")

[node name="Level" type="Node2D"]
script = ExtResource("1_t703y")

[node name="SceneTrans" parent="." instance=ExtResource("9_yhl0x")]
process_mode = 3
Target = "uid://lf85rio40s73"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -9
offset_left = 1192.0
offset_top = -1008.0
offset_right = 1792.0
offset_bottom = 768.0
color = Color(0, 0, 0, 1)

[node name="Ball" parent="." instance=ExtResource("2_51rim")]
position = Vector2(-8, 384)
wall_min_slide_angle = 0.0

[node name="Paddle" parent="." instance=ExtResource("3_vys0a")]
position = Vector2(0, 584)
up_direction = Vector2(0.707107, 0.707107)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(194, -73)
zoom = Vector2(0.65, 0.65)

[node name="blocks" type="Node2D" parent="."]
position = Vector2(0, -192)

[node name="RowSpawner" type="Marker2D" parent="blocks"]
position = Vector2(-1152, -960)

[node name="BlockRow2" parent="blocks" instance=ExtResource("4_kriqx")]
position = Vector2(-1152, -960)

[node name="BlockRow" parent="blocks" instance=ExtResource("4_kriqx")]
position = Vector2(-1152, -704)

[node name="PauseMenu" parent="." instance=ExtResource("4_r8jsn")]
visible = false
z_index = 100
z_as_relative = false
offset_top = 44.0
offset_bottom = 44.0
scale = Vector2(2, 2)

[node name="killzone" type="Area2D" parent="." groups=["Killzone"]]
position = Vector2(0, 793)
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_wc843")

[node name="GameOverMenu" parent="." instance=ExtResource("6_xp2g4")]
visible = false
z_index = 100
offset_left = -1148.0
offset_top = -744.0
offset_right = -1148.0
offset_bottom = -744.0
scale = Vector2(2, 2)
metadata/_edit_group_ = true

[node name="Score" type="Label" parent="."]
z_index = 100
offset_left = 1312.0
offset_top = -576.0
offset_right = 1504.0
offset_bottom = -397.0
text = "Score: ERROR"
label_settings = SubResource("LabelSettings_2rmsu")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Bullets" type="Label" parent="."]
z_index = 100
offset_left = 1312.0
offset_top = -320.0
offset_right = 1504.0
offset_bottom = -141.0
text = "Bullets: ERROR"
label_settings = SubResource("LabelSettings_2rmsu")
horizontal_alignment = 1
autowrap_mode = 2

[node name="DebugDiff" type="Label" parent="."]
z_index = 100
offset_left = 1312.0
offset_top = -72.0
offset_right = 1504.0
offset_bottom = 107.0
text = "Difficulty: ERROR"
label_settings = SubResource("LabelSettings_2rmsu")
horizontal_alignment = 1
autowrap_mode = 2

[node name="DebugLVL" type="Label" parent="."]
z_index = 100
offset_left = 1312.0
offset_top = 192.0
offset_right = 1504.0
offset_bottom = 371.0
text = "Level: ERROR"
label_settings = SubResource("LabelSettings_2rmsu")
horizontal_alignment = 1
autowrap_mode = 2

[node name="BLives" type="Label" parent="."]
z_index = 100
offset_left = 1304.0
offset_top = -832.0
offset_right = 1496.0
offset_bottom = -653.0
text = "Lives: ERROR"
label_settings = SubResource("LabelSettings_2rmsu")
horizontal_alignment = 1
autowrap_mode = 2

[node name="BlockMoveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="BG" parent="." instance=ExtResource("7_hvyoc")]
z_index = -10
position = Vector2(-512, -424)
scale = Vector2(8, 8)
region_rect = Rect2(2.08165e-12, 2.08165e-12, 25600, 25600)
metadata/_edit_lock_ = true

[node name="Solids" type="TileMap" parent="."]
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_boc5s")
format = 2
layer_0/tile_data = PackedInt32Array(393206, 0, 0, 327670, 0, 0, 262134, 0, 0, 196598, 0, 0, 131062, 0, 0, 65526, 0, 0, -10, 0, 0, -65546, 0, 0, -131082, 0, 0, -196618, 0, 0, -262154, 0, 0, -327690, 0, 0, -393226, 0, 0, -458762, 0, 0, 327689, 0, 0, 262153, 0, 0, 196617, 0, 0, 131081, 0, 0, 65545, 0, 0, 9, 0, 0, -65527, 0, 0, -131063, 0, 0, -196599, 0, 0, -262135, 0, 0, -327671, 0, 0, -393207, 0, 0, -458743, 0, 0, -524279, 0, 0, -458761, 0, 0, -458760, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0)

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
z_index = 15
offset_left = 1550.0
offset_top = 758.0
offset_right = 3210.0
offset_bottom = 878.0
rotation = -1.5708
max_value = 50.0
show_percentage = false

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_31fi7")

[node name="LostLifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Resettrans" parent="." instance=ExtResource("9_yhl0x")]
process_mode = 3
Target = "uid://dt76adorl8n2d"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(3, 832)

[connection signal="area_entered" from="killzone" to="." method="_on_killzone_area_entered"]
[connection signal="body_entered" from="killzone" to="." method="_on_killzone_body_entered"]
[connection signal="timeout" from="BlockMoveTimer" to="." method="_on_block_move_timer_timeout"]
[connection signal="timeout" from="LostLifeTimer" to="." method="_on_lost_life_timer_timeout"]
